[tool.poetry]
name = "LISA"
version = "3.0.0.dev1"
description = "Linux Integration Services Automation"
authors = ["contributors <https://github.com/microsoft/lisa/graphs/contributors>"]
license = "MIT"
packages = [
    { include = "lisa" },
    { include = "microsoft" },
]

[tool.poetry.dependencies]
PyGObject = {version = "^3.38.0", platform = 'linux', optional=true}
PyYAML = "^5.4.1"
assertpy = "^1.1"
azure-identity = {version = "^1.9.0", optional = true}
azure-storage-blob = {version = "^12.11.0", optional = true}
azure-mgmt-compute = {version = "^26.1.0", optional = true}
azure-mgmt-marketplaceordering = {version = "^1.1.0", optional = true}
azure-mgmt-network = {version = "^19.3.0", optional = true}
azure-mgmt-resource = {version = "^21.0.0", optional = true}
azure-mgmt-storage = {version = "^20.0.0", optional = true}
azure-storage-file-share = {version = "12.4.0", optional = true}
dataclasses-json = "^0.5.2"
func-timeout = "^4.3.5"
paramiko = "^2.10.1"
pluggy = "^0.13.1"
pypiwin32 = {version = "^223", platform = "win32", optional=true}
pytest-html = "^3.1.1"
python = "^3.8"
python-dateutil = "^2.8.1"
retry = "^0.9.2"
spurplus = "^2.3.4"
semver = "^2.13.0"
types-toml = "^0.1.5"
libvirt-python = {version = "^8.3.0", platform = 'linux', optional=true}
pycdlib = "^1.12.0"
randmac = "^0.1"
toml = "^0.10.2"
Pillow = {version="^9.0.0", optional=true}

# AWS related packages
boto3 = {version = "^1.21.37", optional = true}
boto3-stubs = {version = "^1.21.37", extras = ["essential"], optional = true}

# dev dependencies. Optional isn't supported, so put them here.
Sphinx = {version="^4.1.0", optional=true}
sphinx-argparse = {version="^0.2.5", optional=true}
sphinx-rtd-theme = {version="^0.5.2", optional=true}
sphinxemoji = {version="^0.1.8", optional=true}
sphinx-copybutton = {version="^0.4.0", optional=true}
rstcheck = {version="^3.3.1", optional=true}
types-Pillow = {version="^8.3.3", optional=true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "^5.3"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
mypy = "^0.942"
pep8-naming = "^0.12.1"
rope = "^1.0.0"
types-retry = "^0.1.3"
types-paramiko = "^0.1.7"
types-requests = "^2.25.0"
types-python-dateutil = "^0.1.4"
types-PyYAML = "^5.4.3"


[tool.poetry.extras]
azure = ["azure-identity", "azure-storage-blob", "azure-mgmt-compute", "azure-mgmt-marketplaceordering", "azure-mgmt-network", "azure-mgmt-resource", "azure-mgmt-storage", "azure-storage-file-share", "PyGObject", "Pillow", "types-Pillow"]
libvirt = ["libvirt-python"]
aws = ["boto3", "boto3-stubs"]
legacy = ["pypiwin32"]
doc = ["Sphinx", "sphinx-argparse", "sphinx-rtd-theme", "sphinxemoji", "sphinx-copybutton", "snooty-lextudio", "rstcheck"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
mypy_path = "./typings"
strict = true
namespace_packages = true
implicit_reexport = true
show_column_numbers = true
