[tool.poetry]
name = "LISA"
version = "3.0.0.dev1"
description = "Linux Integration Services Automation"
authors = ["Andrew Schwartzmeyer <andrew@schwartzmeyer.com>", "Chi Song <song.chi@microsoft.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.7.2"
pyyaml = "^5.3.1"
retry = "^0.9.2"
paramiko = "^2.7.1"
spurplus = "^2.3.3"
dataclasses-json = "^0.5.2"
# portalocker for compatibility of Windows, trigger pywin32 installed
portalocker = "^1.7.1" 
azure-identity = {version = "^1.4.0", allow-prereleases = true}
azure-mgmt-resource = {version = "^15.0.0-beta.1", allow-prereleases = true}
azure-mgmt-compute = {version = "^17.0.0-beta.1", allow-prereleases = true}
azure-mgmt-marketplaceordering = {version = "^0.2.1", allow-prereleases = true}
azure-mgmt-network = {version = "^16.0.0-beta.1", allow-prereleases = true}
azure-mgmt-storage = {version = "^16.0.0", allow-prereleases = true}
asserts = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-isort = "^4.0.0"
isort = "^5.5.3"
mypy = "^0.782"
pyls-black = "^0.4.6"
pyls-isort = "^0.2.0"
pyls-mypy = "^0.1.8"
python-language-server = "^0.35.1"
rope = "^0.17.0"
coverage = "^5.3"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
