[tool.poetry]
name = "pytest-lisa"
version = "0.1.0"
description = "Pytest plugin for organizing tests."
license = "MIT"
authors = ["Andrew Schwartzmeyer <andrew@schwartzmeyer.com>"]
readme = "README.md"
homepage = "https://microsoft.github.io/lisa"
repository = "https://github.com/microsoft/lisa/tree/andschwa/pytest/pytest-lisa"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]
packages = [{include = "lisa.py"}]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"
pytest-playbook = "^0.1.0"
pytest-xdist = "^2.1.0"
schema = "0.7.2"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins]
pytest11 = {lisa = "lisa"}

[tool.poetry.scripts]
lisa = "lisa:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
