[tool.poetry]
name = "pytest-target"
version = "0.1.0"
description = "Pytest plugin for remote target orchestration."
authors = ["Andrew Schwartzmeyer <andrew@schwartzmeyer.com>"]
license = "MIT"
classifiers = ["Framework :: Pytest"]
packages = [{include = "target"}]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"
fabric = "^2.5.0"
invoke = "^1.4.1"
tenacity = "^6.2.0"
pytest-playbook = {path = "../pytest-playbook", develop = true}

[tool.poetry.dev-dependencies]

[tool.poetry.plugins]
pytest11 = {target = "target.plugin"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
