[tool.poetry]
name = "pytest-target"
version = "0.1.0"
description = "Pytest plugin for remote target orchestration."
license = "MIT"
authors = ["Andrew Schwartzmeyer <andrew@schwartzmeyer.com>"]
readme = "README.md"
homepage = "https://microsoft.github.io/lisa"
repository = "https://github.com/microsoft/lisa/tree/andschwa/pytest/pytest-target"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]
packages = [{include = "target"}]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"
fabric = "^2.5.0"
filelock = "^3.0.12"
invoke = "^1.4.1"
tenacity = "^6.2.0"
pytest-playbook = "^0.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins]
pytest11 = {target = "target.plugin"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
