[tool.poetry]
name = "LISA"
version = "0.1.0"
description = "Linux Integration Services Automation (LISA)"
authors = ["Andrew Schwartzmeyer <andrew@schwartzmeyer.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.1"
filelock = "^3.0.12"
pytest-timeout = "^1.4.2"
pytest-html = "^2.1.1"
pytest-rerunfailures = "^9.1.1"
pytest-xdist = "^2.1.0"
pytest-lisa = {path = "pytest-lisa", develop = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-isort = "^4.0.0"
isort = "^5.6.1"
mypy = "^0.782"
python-language-server = "^0.35.1"
pyls-black = "^0.4.6"
pyls-isort = "^0.2.0"
pyls-mypy = "^0.1.8"
rope = "^0.18.0"
pytest-flake8 = "^1.0.6"
pytest-mypy = "^0.7.0"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
