[tool.poetry]
name = "pytest-lisa"
version = "0.1.0"
description = "Pytest plugin for Linux Integration Services Automation (LISA)."
authors = ["Andrew Schwartzmeyer <andrew@schwartzmeyer.com>"]
license = "MIT"
classifiers = ["Framework :: Pytest"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
