[tool.poetry]
name = "pytest-target"
version = "0.1.0"
description = "Pytest plugin for remote target orchestration."
authors = ["Andrew Schwartzmeyer <andrew@schwartzmeyer.com>"]
license = "MIT"
classifiers = ["Framework :: Pytest"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"
fabric = "^2.5.0"
invoke = "^1.4.1"
tenacity = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
